--- a/src/index.html
+++ b/src/index.html
@@ -5,13 +5,13 @@
     <link rel="icon" type="image/svg+xml" href="./assets/icons/send.svg"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>NewChat</title>
-    <link rel="stylesheet" href="index.scss" />
-    <script src="index.ts" type="module"></script>
-    <title>Chat</title>
-  </head>
-  <body>
-  <script type="module" src="index.ts"></script>
-  <main id="app"></main>
-  </body>
-</html>
+</head>
+<body>
+    <script type="module" src="./index.ts"></script>
+    <main id="app"></main>
+    <dialog id="dialog-alert" class="dialog-alert container-shadow "></dialog>
+    <dialog id="dialog" class="dialog container-shadow "></dialog>
 
+
+</body>
+</html>
